--- a/src/media-queries.scss
+++ b/src/media-queries.scss
@@ -1,11 +1,34 @@
+//   __  __        _ _         ___               _
+//  |  \/  |___ __| (_)__ _   / _ \ _  _ ___ _ _(_)___ ___
+//  | |\/| / -_) _` | / _` | | (_) | || / -_) '_| / -_|_-<
+//  |_|  |_\___\__,_|_\__,_|  \__\_\\_,_\___|_| |_\___/__/
+//
+// =====================================================================================================
 @use 'sass:map';
 @use 'sass:list';
 @use 'util';
 @use 'error';
 
-// -----------------------------------------------------------------------------------------------------
+// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 /// The $breakpoints variable is a Sass map containing the screen sizes for different devices.
-/// @type map
+///
+/// @prop {pixel} hand [1px]
+///   A very small screen size, such as a small smartphone or smartwatch.
+///
+/// @prop {pixel} page [600px]
+///   A small screen size, such as a large smartphone or a tablet in portrait mode.
+///
+/// @prop {pixel} book [900px]
+///   A medium screen size, such as a small laptop or a tablet in landscape mode.
+///
+/// @prop {pixel} desk [1200px]
+///   A large screen size, such as a large laptop or a low resolution monitor.
+///
+/// @prop {pixel} wide [1800px]
+///   A very large screen size, such as high resolution monitors.
+///
+/// @type {[key]: Pixel}
+///
 /// @group media-queries
 $breakpoints: (
   hand: 1px,
@@ -15,22 +38,54 @@ $breakpoints: (
   wide: 1800px,
 ) !default;
 
-// -----------------------------------------------------------------------------------------------------
+// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 /// The mq mixin is a simple utility in Sass that generates a media query with a given query string and wraps the content inside it.
-/// @param $query A string representing the media query to be generated.
+///
+/// @param {string} $query [null]
+///   A string representing the media query to be generated.
+///
+/// @example scss
+///   @include mq.mq('print') {
+///     .element {
+///       display: block;
+///     }
+///   }
+///
+/// @example css
+///   @media print {
+///     .element {
+///       display: block;
+///     }
+///   }
+///
 /// @group media-queries
-/// @content
 @mixin mq($query) {
   @media #{$query} {
     @content;
   }
 }
 
-// -----------------------------------------------------------------------------------------------------
-/// The `only-on` mixin is a Sass utility that allows you to create media queries for specific breakpoints defined in the $breakpoints map. The mixin uses the @media rule to create a media query that applies the enclosed styles only when the specified breakpoint is active
-/// @param $breakpoint One of the keys in the `$breakpoints` map.
+// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+/// The `only-on` mixin is a Sass utility that allows you to create media queries for specific breakpoints defined in the `$breakpoints` map. The mixin uses the @media rule to create a media query that applies the enclosed styles only when the specified breakpoint is active
+///
+/// @param {string} $breakpoint
+///   One of the keys in the `$breakpoints` map.
+///
+/// @example scss
+///   @include mq.only-on('book') {
+///     .element {
+///       display: block;
+///     }
+///   }
+///
+/// @example css
+///   @media screen and (min-width: 900px) and (max-width: 1199px) {
+///     .element {
+///       display: block;
+///     }
+///   }
+///
 /// @group media-queries
-/// @content
 @mixin only-on($breakpoint) {
   @if map.has-key($breakpoints, $breakpoint) {
     $breakpoint-start: map.get($breakpoints, $breakpoint);
@@ -61,11 +116,27 @@ $breakpoints: (
   }
 }
 
-// -----------------------------------------------------------------------------------------------------
+// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 /// This mixin generates a media query with a `min-width` based on the value associated with the provided `$breakpoint` key in the `$breakpoints` map. It can be used to apply styles for screens larger than a specific breakpoint.
-/// @param $breakpoint One of the keys in the `$breakpoints` map.
+///
+/// @param {string} $breakpoint
+///   One of the keys in the `$breakpoints` map.
+///
+/// @example scss
+///   @include mq.larger-than('book') {
+///     .element {
+///       display: block;
+///     }
+///   }
+///
+/// @example css
+///   @media screen and (min-width: 900px) {
+///     .element {
+///       display: block;
+///     }
+///   }
+///
 /// @group media-queries
-/// @content
 @mixin larger-than($breakpoint) {
   @if map.has-key($breakpoints, $breakpoint) {
     @include mq(
@@ -81,11 +152,27 @@ $breakpoints: (
   }
 }
 
-// -----------------------------------------------------------------------------------------------------
+// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 /// This mixin generates a media query with a `max-width` based on the value associated with the provided `$breakpoint` key in the `$breakpoints` map. It can be used to apply styles for screens smaller than a specific breakpoint.
-/// @param $breakpoint One of the keys in the `$breakpoints` map.
+///
+/// @param {string} $breakpoint
+///   One of the keys in the `$breakpoints` map.
+///
+/// @example scss
+///   @include mq.smaller-than('book') {
+///     .element {
+///       display: block;
+///     }
+///   }
+///
+/// @example css
+///   @media screen and (max-width: 899px) {
+///     .element {
+///       display: block;
+///     }
+///   }
+///
 /// @group media-queries
-/// @content
 @mixin smaller-than($breakpoint) {
   @if map.has-key($breakpoints, $breakpoint) {
     @include mq(
@@ -101,12 +188,30 @@ $breakpoints: (
   }
 }
 
-// -----------------------------------------------------------------------------------------------------
+// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 /// This mixin generates media queries with the specified min-width and max-width values based on a `$breakpoints` map. It is designed to simplify the process of creating responsive styles by allowing developers to easily define media queries using named breakpoints instead of specific pixel values.
-/// @param $breakpoint-start One of the keys in the `$breakpoints` map.
-/// @param $breakpoint-end One of the keys in the `$breakpoints` map.
+///
+/// @param {string} $breakpoint-start
+///   One of the keys in the `$breakpoints` map.
+///
+/// @param {string} $breakpoint-end
+///   One of the keys in the `$breakpoints` map.
+///
+/// @example scss
+///   @include mq.between('book', 'desk') {
+///     .element {
+///       display: block;
+///     }
+///   }
+///
+/// @example css
+///   @media screen and (min-width: 900px) and (max-width: 1199px) {
+///     .element {
+///       display: block;
+///     }
+///   }
+///
 /// @group media-queries
-/// @content
 @mixin between($breakpoint-start, $breakpoint-end) {
   @if map.has-key($breakpoints, $breakpoint-start) and
     map.has-key($breakpoints, $breakpoint-end)
