--- a/src/util.scss
+++ b/src/util.scss
@@ -3,18 +3,29 @@
 //  | |_| |  _| | | |  _| / -_|_-<
 //   \___/ \__|_|_|_|\__|_\___/__/
 //
-////////////////////////////////////////////////////////////////////////////////////////////////////////
-
-// Dependencies
+// =====================================================================================================
 @use 'sass:map';
 @use 'sass:list';
+@use 'error';
 
-// -----------------------------------------------------------------------------------------------------
+// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+/// Returns the next key in a map given the current key. Returns null if `$current-key` is the last. It throws an error if the current key is not found in the map.
+///
+/// @param {map} $map [null]
+///   The map to be searched.
+///
+/// @param {string} $current-key [null]
+///   The current key in the map.
 ///
 /// @group utils
 @function next-key-in-map($map, $current-key) {
+  @if map.has-key($map, $current-key) {
+    @return error.throw(
+      'The breakpoint named "#{$breakpoint-start}" or "#{$breakpoint-end} was not found.',
+      'indexing'
+    );
+  }
   $keys: map.keys($map);
-  // If $current-key is not on $map, throw.
   $current-index: list.index($keys, $current-key);
   @if $current-index == list.length($keys) {
     @return null;
