--- a/src/throw.scss
+++ b/src/throw.scss
@@ -12,6 +12,8 @@
 ///
 /// @todo - Example annotation
 ///
+/// @group throw
+///
 $catching-enabled: false !default;
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -31,6 +33,8 @@ $catching-enabled: false !default;
 ///
 /// @todo - Example annotation
 ///
+/// @group throw
+///
 @function error($message: '', $catch: $catching-enabled) {
   @if $catch {
     @error $message;
@@ -49,6 +53,8 @@ $catching-enabled: false !default;
 ///
 /// @todo - Example annotation
 ///
+/// @group throw
+///
 @mixin error($message, $catch: $catching-enabled) {
   --bone-error: '#{error($message, $catch)}';
 }
@@ -64,6 +70,8 @@ $catching-enabled: false !default;
 ///
 /// @todo - Example annotation
 ///
+/// @group throw
+///
 @function value-msg($value, $expected) {
   @return '(Value Error) The value #{$value} is invalid. Expected: #{$expected}';
 }
@@ -78,6 +86,8 @@ $catching-enabled: false !default;
 ///   The list or map there `$key` wasn't found.
 ///
 /// @todo - Example annotation
+///
+/// @group throw
 ///
 @function index-msg($key, $container) {
   @return '(Indexing Error) The value #{$key} was not found inside #{$container}';
